assets/stylesheets/quote.css
body{
  background-color: #36393f;
}

.quote{
  padding-top: 20px;
  background-color: #36393f;
  user-select: none;
  margin: auto;
  width: 50%;
  line-height: 10px;
  caret-color: transparent;
}

.message{
  margin: 0;
  padding-left: var(--avatar-message-distance);
  padding-top: .125rem;
  padding-bottom:.125rem;
  font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif;
}

.avatar{
  display: inline-block;
  position: static;
  margin-top: calc(0px - .125rem);
  left: 16px;
  padding-right: 10px;
  width: 45px;
  height: 45px;
  border-radius: 50%;
  user-select: none;
  vertical-align: baseline
}

.contents{
  position: absolute;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: 0;
}

.avatar img{
  max-width: 100%;
  max-height: 100%;
  display: inline-block;
  border-radius: 50%;
}

.nameHeader{
  margin: 0;
}

.username{
  user-select: text;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  display: inline;
  vertical-align: baseline;
  position: relative;
  overflow: hidden;
  /* These names are used by the program, and thus need to be in this specific format */
  --username-Jon: #02c700;
  --username-Matt: #c60101;
  --username-David: #ffe300;
  --username-Kyle: #4452ff;
  --username-Zach: #ff0061;
  --username-Chris: #cc00ff;
  --username-Max: #1a7939;
  --username-Jayson: #ff0094;
  --username-Hiep: #00a5ff;
  --username-Tahseen: #ff0000;
  --username-Jakob: #ff7400;
  --username-Rodge: #ff0808;
  --username-Jack: #000001;
  --username-Nicc: #da004e;
}

.messageText{
  user-select: text;
  margin-left: calc(0px - var(--avatar-message-distance));
  padding-left: var(--avatar-message-distance);
  overflow: hidden;
  position: relative;
  font-size: 1rem;
  line-height: 1.375rem;
  font-weight: 400;
  color: var(--text-normal);
}

.embed img{
  height: 300px;
  max-width: 500px;
}

.quote{
  --text-normal: #dcddde;
  --avatar-message-distance: 80px;
}

